--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
     <div class="container">
         <header>
-            <img src="avatar.jpg" alt="Tongyu Wu" class="avatar">
+            <img src="avatar.png" alt="Tongyu Wu" class="avatar">
             <h1>Tongyu Wu</h1>
             <p class="subtitle">Master Candidate in Data Science @ Tsinghua University</p>
             
