--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             color: var(--text-color);
             margin: 0;
             padding: 0;
-            /* 这里已修改为 .jpg */
             background-image: url('background.jpg');
             background-size: cover;
             background-position: center;
@@ -213,7 +212,6 @@
                     <span class="meta">Nanjing | 2021 - 2025</span>
                 </div>
                 <span class="role">B.Econ. in Industrial Economics</span>
-                <p>GPA: 4.35 / 5.00</p>
             </div>
 
             <div class="item">
@@ -221,7 +219,7 @@
                     <h3>Tohoku University</h3>
                     <span class="meta">Sendai, Japan | 2024.04 - 2024.09</span>
                 </div>
-                <span class="role">Exchange Student (IPLA Program)</span>
+                <span class="role">Exchange Student</span>
             </div>
         </div>
 
@@ -230,7 +228,7 @@
             
             <div class="item">
                 <div class="item-header">
-                    <h3>Songhe Capital</h3>
+                    <h3>Green Pine Capital</h3>
                     <span class="meta">Shenzhen | 2025.06 - 2025.09</span>
                 </div>
                 <span class="role">Investment Intern</span>
@@ -240,15 +238,15 @@
             <div class="item">
                 <div class="item-header">
                     <h3>BlueRun Ventures</h3>
-                    <span class="meta">Beijing & Online | 2023.05 - 2023.09</span>
+                    <span class="meta">Beijing | 2023.05 - 2023.09</span>
                 </div>
                 <span class="role">Research Intern</span>
-                <p><strong>Focus:</strong> Robotics Industry, Equity Financing Trends.</p>
+                <p><strong>Focus:</strong> Robotics, Asset Management.</p>
             </div>
         </div>
 
         <div class="section">
-            <h2>Selected Projects</h2>
+            <h2>Projects</h2>
             
             <div class="item">
                 <div class="item-header">
