--- a/index.html
+++ b/index.html
@@ -426,9 +426,13 @@
                         <span class="tag">iFinD</span>
                     </div>
                 </div>
-                <div>
+                <div style="margin-bottom: 15px;">
                     <span class="subtitle" style="display:inline; margin-right:10px;">Languages:</span>
-                    <span class="desc">Mandarin, English, Japanese</span>
+                    <div class="tech-tags" style="display:inline-flex;">
+                        <span class="tag">Mandarin</span>
+                        <span class="tag">English</span>
+                        <span class="tag">Japanese</span>
+                    </div>
                 </div>
             </section>
 
